2002-05-02  Mike Kestner <mkestner@speakeasy.net>

	* generator/ObjectGen.cs : Add support for .custom files.
	* gtk/Window.custom : clean up build
	* sample/HelloWorld.cs : Use the customizations.
	* sample/ButtonApp.cs : Use the customizations.

2002-05-02  Mike Kestner <mkestner@speakeasy.net>

	* README : Describe the new make procedure.
	* configure.in : Add the new Makefile generation.
	* makefile : add the glue dir, make linux the default build,
	  add an install target
	* */makefile.win32 : temp build files for win32
	* */Makefile.in : new configurable make system
	* */makefile : killed
	* generator/BoxedGen.cs : Now uses GLib.Boxed
	* generator/ObjectGen.cs : Use Values for Props.
	* generator/SymbolTable.cs : Add IsEnum method.
	* glib/Boxed.cs : Major overhaul.
	* glib/Object.cs : Remove type specific (Get|Set)Property. Now
	  use GValue based property accessors.
	* glib/TypeFundamentals.cs : Update to current values.
	* glib/Value.cs : Refactor to use glue.

2002-04-25  Mike Kestner <mkestner@speakeasy.net>

	* autogen.sh : simple config for the glue build
	* configure.in : simple config for the glue build
	* makefile : add glue dir to build
	* glib/SList.cs : Fix some leakage.
	* glue/value.c : a helper function for heap alloc of GValues
	* glue/Makefile.am : build for libgtksharpglue
	
2002-04-19  Mike Kestner <mkestner@speakeasy.net>

	* glib/SList.cs : A more sane approach.
	* glib/Value.cs : Marshal strings directly with pinvoke

2002-04-18  Joe Shaw  <joe@assbarn.com>

	* */makefile: Allow a different MCS to be passed in on the make
	command line.

2002-04-09  Mike Kestner <mkestner@speakeasy.net>

	* tagging for gtk-sharp-0.1

2002-04-09  Mike Kestner <mkestner@speakeasy.net>

	* sample/ButtonApp.cs : Get it to run on linux.

2002-04-04  Mike Kestner <mkestner@speakeasy.net>

	* generator/CallbackGen.cs : Unstubify.
	* generator/SymbolTable.cs : qualify some simple typenames.

2002-03-29  Mike Kestner <mkestner@speakeasy.net>
