@@ -1,3 +1,8 @@
+2002-05-03  Mike Kestner <mkestner@speakeasy.net>
+
+	* sample/makefile.win32 : add the Menu sample
+	* sample/Menu.cs : A menu and box packing sample.
+
 2002-05-02  Mike Kestner <mkestner@speakeasy.net>
 
 	* generator/ObjectGen.cs : Add support for .custom files.
